--- a/HonGong/HonGong/HonGong.vcxproj.filters
+++ b/HonGong/HonGong/HonGong.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="문제5번.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="HongGong_4-28.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
